# kompetens

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  Makefile  README.md  VISION.md  docker-compose.yml  pyproject.toml
.claude/: accessibility.md
.claude/skills/: badges.md  matching.md  opendata.md  referentiel.md  vocal.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_referentiel_emergent.py
apps/api/app/: config.py  main.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  badge.py  base.py  competence.py  consent.py  experience.py  profile.py  rome.py  user.py
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: ConnectionStatus.tsx  Layout.tsx  VocalButton.tsx
apps/web/src/pages/: AidantPage.tsx  HomePage.tsx  InventairePage.tsx  RecruteurPage.tsx
apps/web/src/services/: api.ts
apps/web/src/stores/: appStore.ts
scripts/: import_rome.py  seed.py
scripts/spikes/: llm_benchmark.py  requirements-spikes.txt  tts_benchmark.py  whisper_benchmark.py
