[project]
name = "kompetens"
version = "0.1.0"
description = "Voice-first sovereign job-matching POC for New Caledonia"
requires-python = ">=3.11"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
