[project]
name = "kompetens-api"
version = "0.1.0"
description = "Kompetens FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.14,<2",
    "pgvector>=0.3,<1",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
